Modified Video and Photo #Code

--- a/templates/video.html
+++ b/templates/video.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Human Detection</title>
     <link rel="stylesheet" href="/static/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
@@ -27,10 +27,10 @@
             <div class="mx-auto" style="max-width: 900px;">
                 <div class="row row-cols-1 row-cols-md-2 d-flex justify-content-center">
                     <div class="col mb-4">
-                        <div class="card bg-primary-light">
+                        <div class="card bg-secondary-light">
                             <div class="card-body text-center px-4 py-5 px-md-5">
-                                <p class="fw-bold text-primary card-text mb-2">IMAGE</p>
-                                <h5 class="fw-bold card-title mb-3">Detected Humans From Video</h5><button class="btn btn-primary btn-sm" type="button" onclick="window.location.href='home'">Back To Home</button>
+                                <p class="fw-bold text-secondary card-text mb-2">VIDEO</p>
+                                <h5 class="fw-bold card-title mb-3">Detected Humans From Video</h5><button class="btn btn-secondary btn-sm" type="button" onclick="window.location.href='home'">Back To Home</button>
                             </div>
                         </div>
                     </div>
@@ -42,6 +42,5 @@
     <script src="/static/assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="/static/assets/js/bold-and-dark.js"></script>
 </body>
-
 
 </html>
